--- a/index.qmd
+++ b/index.qmd
@@ -3,3 +3,5 @@ title: "Welcome!"
 ---
 
 Hi there, my name is Aaron Gaines. This website serves as somewhat of an online portfolio for me. Hopefully you will get a better idea of who I am and the skills I can bring to your projects. The portfolio page contains links to different projects I have completed with the goal of demonstrating as many of my skills in GIS and data science as possible. Please check out my About Me page for more information on who I am and check my Contact links for ways to get in touch with me.
+
+Adding this line to test the automatic update and publishing.
