added arcpy_example, rendered

--- a/portfolio.qmd
+++ b/portfolio.qmd
@@ -6,4 +6,4 @@ Below is a list of links to different projects of mine that I have selected to h
 ## Projects
 [Natural Language Processing and Neural Network Classification](nlp_ann.ipynb)
 
-[Another Placeholder Project]()
+[Using Arcpy to Automate GIS Tasks](arcpy_example.ipynb)
