added links, rendered

--- a/about.qmd
+++ b/about.qmd
@@ -8,7 +8,7 @@ My name is Aaron Gaines, and I am 29 years old. I have been working as a researc
 
 Most of my time as a research assistant has been spent working on updating the National Hydrography Dataset (NHD), a USGS database, for the California Department of Water Resources. This involved creating, editing, and managing digitized hydrographic features while maintaining a minimum level of quality required by the USGS to ensure data interoperability between different state agency’s update efforts. Overtime my responsibilities within the team grew from simple first pass editing to managing a job from start to finish, including performing quality control checks on other editor's work to ensure our updates can be merged into the main database.
 
-More recently I have been working on a pilot project investigating the possible effects of sea level rise on groundwater levels and contamination, as well as disadvantaged communities (DACs). This has involved doing literature reviews on similar projects, aggregating, and presenting that information to a larger team. With feedback I then would apply the methodologies found in different papers to our data to compare and discover the different advantages and drawbacks. An example of this was to look at how different state agencies would designate DACs. From this the group decided on a methodology that seemed to be the most complete, which happened to be the CalEnviroScreen (CES). I then used their white paper to emulate some of their methodologies in determining environmental and social disadvantages with python and ArcGIS Pro.  For example, spatial analysis of monitoring wells and their sample data to determine a blockgroup's exposure to specific groundwater contamination. When we found their determination of data quality not to our liking, I used the American Housing Survey variance replicate data to determine the uncertainty in our social vulnerability index, a method described by (et al.). This project has grown my skills in literature review, effectively presenting technical papers and methodologies and emulation of said methodologies with Python.
+More recently I have been working on a pilot project investigating the possible effects of sea level rise on groundwater levels and contamination, as well as disadvantaged communities (DACs). This has involved doing literature reviews on similar projects, aggregating, and presenting that information to a larger team. With feedback I then would apply the methodologies found in different papers to our data to compare and discover the different advantages and drawbacks. An example of this was to look at how different state agencies would designate DACs. From this the group decided on a methodology that seemed to be the most complete, which happened to be the [CalEnviroScreen (CES)](https://oehha.ca.gov/calenviroscreen/report/calenviroscreen-40). I then used their white paper to emulate some of their methodologies in determining environmental and social disadvantages with python and ArcGIS Pro.  For example, spatial analysis of monitoring wells and their sample data to determine a blockgroup's exposure to specific groundwater contamination. When we found their determination of data quality not to our liking, I used the American Housing Survey variance replicate data to determine the uncertainty in our social vulnerability index, a method described by [Boscoe et al., 2022](https://doi.org/10.1016%2Fj.ssmph.2022.101078). This project has grown my skills in literature review, effectively presenting technical papers and methodologies and emulation of said methodologies with Python.
 
 ### **Skills**
 
