--- a/arcpy_example.ipynb
+++ b/arcpy_example.ipynb
@@ -271,18 +271,31 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Place holder cell for clipped DEM output"
+    "![](projects\\18090102_dem.png)"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "geoprj",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.13"
   },
   "orig_nbformat": 4
  },
